--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "inquirer": "^8.2.6",
     "chalk": "^4.1.2",
-    "fs-extra": "^11.1.1"
+    "dotenv": "^17.2.3",
+    "fs-extra": "^11.1.1",
+    "inquirer": "^8.2.6"
   },
   "engines": {
     "node": ">=14"
